<resources>
    <string name="app_name">SanheDefence</string>
    <string name="main_activity_title">移动工程质监(人防端)</string>

    <string name="quality_fragment">质监任务</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="site_quality_fragment">现场质监</string>

    <string name="spot_check_record_fragment">抽查记录</string>
    <string name="engineering_data_fragment">工程列表</string>
    <string name="quality_item_content">质监抽检内容：</string>
    <string name="quality_item_projectName">工程名称：</string>
    <string name="item_quality_address">工程地址：</string>
    <string name="item_quality_time">抽检时间：</string>
    <string name="record_item_id">编号：</string>
    <string name="record_item_pro_name">抽检事项：</string>
    <string name="record_item_result">抽检结果：</string>
    <string name="record_item_time">抽检时间：</string>
    <string name="item_site_pro_name">工程名称：</string>
    <string name="item_site_title">质监事项：</string>
    <string name="login_title">三河市人防工程综合管理信息系统</string>
    <string name="login_enter_username">请输入用户名</string>
    <string name="login_enter_password">请输入密码</string>
    <string name="login_btn_content">登 录</string>
    <string name="login_username_pwd_error">用户名或者密码错！</string>
    <string name="login_username_pwd_null">用户名或者密码不能为空！</string>
    <string name="site_quality_save">保存并提交</string>
    <string name="photo_edit_save">保存</string>
    <string name="photo_require">照片要求:</string>
    <string name="photo_content">照片内容:</string>
    <string name="photo_yes">确定</string>
</resources>
