<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/action_bar" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photo_content"
        android:textSize="18sp"
        android:padding="15dp"
        android:textStyle="normal|bold" />
    <TextView
        android:id="@+id/photoContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/photo_require"
        android:padding="15dp"
        android:textStyle="normal|bold" />
    <TextView
        android:id="@+id/photo_require"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        >

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/quality_detail_button"
            android:textColor="@color/engineering_bg"
            android:text="@string/photo_yes"
            />
    </RelativeLayout>
</LinearLayout>