<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:padding="16dp"
    android:orientation="horizontal">
        
    <LinearLayout
        android:id="@+id/left"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/quality_item_title"
                android:text="@string/record_item_id"
                />
            <TextView
                android:id="@+id/record_item_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/quality_item_title"
                android:text="0123-4567-8977"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/record_item_pro_name"
                />
            <TextView
                android:id="@+id/record_item_pro_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="隐蔽工程预埋验收"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/record_item_result"
                />
            <TextView
                android:id="@+id/record_item_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="合格"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/record_item_time"
                />
            <TextView
                android:id="@+id/record_item_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2017年5月6日18:38:52"
                />
        </LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:id="@+id/right"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.2"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/main_icon_rightward"
            />

    </RelativeLayout>
</LinearLayout>