<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="horizontal">
        
    <LinearLayout
        android:id="@+id/left"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/quality_item_title"
                android:text="@string/quality_item_content"
                />
            <TextView
                android:id="@+id/quality_item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/quality_item_title"
                android:singleLine="true"
                android:text="主体结构验收"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quality_item_projectName"
                />
            <TextView
                android:id="@+id/quality_item_pro_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="君晓家园小区人防工程项目"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_quality_address"
                />
            <TextView
                android:id="@+id/quality_item_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="和平西路与鼎盛西大街交叉口南行300米路东"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_quality_time"
                />
            <TextView
                android:id="@+id/quality_item_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2017年5月6日18:38:52"
                />
        </LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:id="@+id/right"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.2"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/main_icon_rightward"
            />

    </RelativeLayout>
</LinearLayout>